--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-bootstrap": "^2.7.2",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.8.2",
+    "react-router": "^6.9.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
