--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-bootstrap": "^2.7.2",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-useanimations": "^2.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
