--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
+    "react-booking-form": "^2.0.0-alpha.64",
     "react-bootstrap": "^2.7.2",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
