--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-useanimations": "^2.10.0",
+    "svg-react-loader": "^0.4.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
